Updated final changes

--- a/complete_version/credentials.yml
+++ b/complete_version/credentials.yml
@@ -13,9 +13,9 @@ rest:
 #  page-access-token: "<your page access token>"
 
 slack:
-  slack_token: "xoxb-1617540651031-1638483659700-bPBcO7QjN9NTu1mknFkgSvWB"
-  slack_channel: "A01JL99SLFL"
-  slack_signing_secret: "b597c61c2eba5fa26eacfb14eb8d16f2"
+ slack_token: xoxb-1316776167141-1639222178564-ZhVgMc4Rxi7Tzq79Q97wagcz
+ slack_channel: myprojects-uty9481.slack.com
+ slack_signing_secret: cd50b871a1cb1b7099c33e67b2c3ed53
 
 #socketio:
 #  user_message_evt: <event name for user message>
