--- a/complete_version/credentials.yml
+++ b/complete_version/credentials.yml
@@ -13,9 +13,9 @@ rest:
 #  page-access-token: "<your page access token>"
 
 slack:
- slack_token: xoxb-1316776167141-1639222178564-ZhVgMc4Rxi7Tzq79Q97wagcz
- slack_channel: myprojects-uty9481.slack.com
- slack_signing_secret: cd50b871a1cb1b7099c33e67b2c3ed53
+ slack_token: ""
+ slack_channel: ""
+ slack_signing_secret: ""
 
 #socketio:
 #  user_message_evt: <event name for user message>
