--- a/complete_version/credentials.yml
+++ b/complete_version/credentials.yml
@@ -13,9 +13,9 @@ rest:
 #  page-access-token: "<your page access token>"
 
 slack:
- slack_token: ""
+ slack_token: "xoxb-1618469900149-1762680778177-2W44T5Yq8kRQWIqvEQv4yXGl"
  slack_channel: ""
- slack_signing_secret: ""
+ slack_signing_secret: "261f7eaf5ddabe56461bb64f9ddcf890"
 
 #socketio:
 #  user_message_evt: <event name for user message>
