--- a/complete_version/data/nlu.yml
+++ b/complete_version/data/nlu.yml
@@ -77,7 +77,7 @@ nlu:
     - Ich möchte etwas über [Hindi](language) wissen.
     - Können Sie bitte [Spanisch](language) suchen?
     - Benötigen Sie weitere Informationen für [Französisch](language)
-    - Lookup [gujrati](language)
+    - Nachschlagen [gujrati](language)
     - Hilf mir, [urdu](language) zu finden
     - Kennen Sie [russisch](language)
     - Hilf mir bei der Suche nach [Italienisch](language)
