Signed-off-by: Meer <meeribs@gmail.com>

--- a/complete_version/domain.yml
+++ b/complete_version/domain.yml
@@ -9,6 +9,7 @@ intents:
   - affirm
   - deny
   - lang_search
+  - country_Lang_search
 entities:
   - language
   - Land
@@ -58,6 +59,7 @@ actions:
 - utter_greet
 - utter_goodbye
 - action_lang_search
+- country_lang_search
 - utter_thanks
 - utter_did_that_help
 - utter_sorry
