--- a/complete_version/data/nlu.yml
+++ b/complete_version/data/nlu.yml
@@ -74,12 +74,12 @@ nlu:
 
 - intent: country_Lang_search
   examples: |
-    - Was ist die Sprache, in der gesprochen wird (Land)
-    - Nennen Sie die Sprache, in der gesprochen wird (Land)
-    - In welcher Sprache wird gesprochen (Land)
-    - Erzähl mir von der Amtssprache in (Land)
-    - Erzähl mir mehr über die Landessprache des (Land)
-    - Hilf mir bei der Suche nach der offiziellen Sprache von (Land)
+    - Was ist die Sprache, in der gesprochen wird(Land)
+    - Nennen Sie die Sprache, in der gesprochen wird(Land)
+    - In welcher Sprache wird gesprochen(Land)
+    - Erzähl mir von der Amtssprache in(Land)
+    - Erzähl mir mehr über die Landessprache des(Land)
+    - Hilf mir bei der Suche nach der offiziellen Sprache von(Land)
 
 
 - intent: lang_search
@@ -101,7 +101,7 @@ nlu:
     - Kannst du etwas über [gujrati](language) erzählen?
     - Was weißt du über [thailändisch](language)
     - Wirst du nach [russisch](language) suchen?
-    - Hilf mir beim Erlernen von [Italienisch](language)
+    - Hilf mir beim Erlernen von [English](language)
     - Bitte geben Sie weitere Informationen zu [Deutsch](language)
     - Zeig mir Ergebnisse für [türkisch](language)
     - Erfahren Sie mehr über [Griechisch](language)
